# V_AES67

./: .gitignore  AES67虚拟声卡软件开发方案.md  AES67软件栈设计与开发计划.md  CODE_REVIEW.md  LICENSE  PROGRESS.md  README.md  build.py  ioctl_test.cpp  routing.json  使用指南.md  开发计划.md  方案设计.md
asio/: _test_load.cpp  asio_dll.cpp  asio_exports.def  asio_minimal.cpp  asio_registry.reg
docs/: Steinberg ASIO SDK 2.3 官方文档（Markdown完整版）.txt  驱动编译安装指南.md
driver/: AES67Driver.inf  AES67Driver.vcxproj  AES67Driver.vcxproj.filters  adapter.cpp  aes67driver.h  aes67driver.rc  build.bat  common.cpp  common.h  hw.cpp  hw.h  ivshmemsavedata.cpp  ivshmemsavedata.h  kshelper.h  minstream.cpp  minstream.h  mintopo.cpp  mintopo.h  minwave.cpp  minwave.h  resource.h  savedata.cpp  savedata.h  toptable.h  wavtable.h
engine/: _list_devices.cpp  _listdev.cpp  _pipetest.cpp  _test_compile.bat  aes67_engine.cpp  aes67_engine.h  audio_config.h  audio_render_thread.cpp  audio_render_thread.h  audio_thread.cpp  audio_thread.h  jitter_buffer.h  logger.cpp  logger.h  loopback.cpp  main.cpp  mixing_bus.h  network_receiver.cpp  network_receiver.h  network_thread.cpp  network_thread.h  pipe_server.cpp  pipe_server.h  ptp_clock.cpp  ptp_clock.h  ptp_thread.cpp  ptp_thread.h  ring_buffer.h  routing.h  routing.json  sap_announcer.cpp  sap_announcer.h  sine_test.cpp  wasapi_device.cpp  wasapi_device.h
panel/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  pipe_client.cpp  pipe_client.h
